--- a/django_blog/blog/templates/blog/comment_form.html
+++ b/django_blog/blog/templates/blog/comment_form.html
@@ -1,6 +1,6 @@
-<h1>Edit Comment</h1>
+<h1>{% if object %}Edit Comment{% else %}Add Comment{% endif %}</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Save Changes</button>
+    <button type="submit">{% if object %}Save Changes{% else %}Post Comment{% endif %}</button>
 </form>
